--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<div>
-  <h1 class="mt-2 mx-3">{{ pageTitle }}</h1>
-  <pm-products></pm-products>
+<nav class="navbar navbar-expand navbar-light bg-light">
+  <a class="navbar-brand mx-4">{{ pageTitle }}</a>
+  <ul class="nav nav-pills">
+    <li><a class="nav-link" routerLink="/welcome">Home</a></li>
+    <li><a class="nav-link" routerLink="/products">Products List</a></li>
+  </ul>
+</nav>
+<div class="container-fluid">
+  <router-outlet></router-outlet>
 </div>
