Add back button to product detail page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
-  <a class="navbar-brand mx-4">{{ pageTitle }}</a>
+  <a class="navbar-brand mx-4" routerLink="/welcome">{{ pageTitle }}</a>
   <ul class="nav nav-pills">
     <li><a class="nav-link" routerLink="/welcome">Home</a></li>
     <li><a class="nav-link" routerLink="/products">Products List</a></li>
